--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "root/upload-helper",
+    "name": "upload-helper",
     "description": "A class that helps to upload files easily",
     "authors": [
         {
